# Parallel-Web-Crawler-OpenMP

./: .gitignore  CMakeLists.txt  Makefile  README.md  index.js  package.json  vcpkg.json
lib/: fetch.cpp  main.cpp  parser.cpp
lib/includes/: book.h  fetch.h  parser.h
scripts/: run.ps1  run.sh
src/: main.cpp  parser.cpp
src/app/: app.cpp  fetch_data.cpp  fetch_html.cpp  image_loader.cpp  parser_html.cpp
src/assets/: logo.xpm
src/include/: app.h  book.h  image_loader.h
src/includes/: book.h  fetch_html.h  parser.h  parser_html.h
